--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,11 @@
 {
   "name": "thoughtweaver-backend",
+  "version": "1.0.0",
   "type": "module",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
